<resources>
    <string name="app_name">Magic Box</string>
    <string name="click_button">处理文件</string>
    <string name="up_button">一键处理文件</string>
    <string name="file_text_show">上传文件名称</string>
    <string name="file_text_name">file</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign i
        1007n or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Login</string>
    <string name="todo">TODO</string>
    <string name="register_btn">Register</string>
    <string name="forget_btn">ForgetPassword</string>
    <string name="accept_btn">I have read and agree to the user agreement and privacy policy</string>
    <string name="welcome_to_page">儿童体态检测APP</string>
    <string name="next_btn">Next</string>
    <string name="module_list">模型库</string>
    <string name="my_module_list">我的模型</string>
    <string name="_3d_printer">3D打印机</string>
    <string name="_btn_print">打印</string>
    <string name="pintthismodule">pintThisModule</string>
    <!--    <string name="inputPass">WiFi Network Connection</string>-->
    <string name="inputPass">WiFi连接</string>
    <string name="wifiName">WiFi名称</string>
    <string name="wifiPass">WiFi密码</string>
    <string name="new_module">创建模型</string>
    <string name="module_param">模型参数</string>
    <string name="printer_title">3D打印机</string>
    <string name="printer_statue_uncon">● 未连接</string>
    <string name="printer_statue_conn">● 已连接</string>
    <string name="printer_model">型号：</string>
    <string name="printer_work_space">工作空间：</string>
    <string name="printer_material">打印耗材：</string>
    <string name="connect_req1">1.确定手机已链接WiFi网络</string>
    <string name="connect_req2">2.确定3D打印机已启用WiFi功能</string>
    <string name="connect_req3">3.点击连接，输入密码关联设备</string>
    <string name="connect_req4">4.连接3D打印机后，进入打印页面选择并打印</string>
    <string name="connect_req5">5.连接成功后就可以打印模型拉</string>
    <string name="status_title">名称</string>
    <string name="status_waiting">等待打印</string>
    <string name="big_button">放大</string>
    <string name="lit_button">下载</string>
    <string name="down_button">下载文件</string>
    <string name="down_text_show">...</string>
    <string name="jump_button">处理文件</string>
    <string name="view_button">预览</string>
    <string name="show_list_button">显示全部</string>

    <string name="menu_item_about">About App</string>
    <string name="about_app_version">App Version: %s</string>

    <string name="main_title">Home</string>

    <string name="esptouch_message_permission">APP require Location permission to get Wi-Fi information. \nClick to request permission</string>
    <string name="esptouch_message_location">Please turn on GPS to get Wi-Fi information.</string>
    <string name="esptouch_message_wifi_connection">Please connect Wi-Fi first.</string>
    <string name="esptouch_message_wifi_frequency">Current Wi-Fi connection is 5G, but the device just support 2.4G.</string>

    <string name="esptouch1_title">EspTouch</string>
    <string name="esptouch1_about_version">EspTouch Version: %s</string>
    <string name="esptouch1_ssid_title">WIFI(SSID): </string>
    <string name="esptouch1_input_pass">输入WiFi密码</string>
    <string name="esptouch1_bssid_title">BSSID: </string>
    <string name="esptouch1_password_title">Password: </string>
    <string name="esptouch1_device_count_title">Device count: </string>
    <string name="esptouch1_package_broadcast">Broadcast</string>
    <string name="esptouch1_package_multicast">Multicast</string>
    <string name="esptouch1_confirm">Confirm</string>
    <string name="esptouch1_wifi_5g_message">Device don\'t support 5G Wi-Fi, please make sure the currently connected Wi-Fi is 2.4G, or you can try multicast</string>
    <string name="esptouch1_location_permission_title">⚠️Warning</string>
    <string name="esptouch1_location_permission_message">On Android M or higher version, App can\'t get Wi-Fi connection information if you forbid Location permission.</string>
    <string name="esptouch1_configuring_message">Wifi is configuring, please wait for a moment…</string>
    <string name="esptouch1_configure_wifi_change_message">Wi-Fi disconnected or changed</string>
    <string name="esptouch1_configure_result_failed">EspTouch failed</string>
    <string name="esptouch1_configure_result_failed_port">Create EspTouch task failed, the EspTouch port could be used by other thread</string>
    <string name="esptouch1_configure_result_success">EspTouch 完成</string>
    <string name="esptouch1_configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>

    <string name="esptouch2_title">EspTouch V2</string>
    <string name="esptouch2_about_version">EspTouch V2 Version: %s</string>
    <string name="esptouch2_ssid_label">SSID: </string>
    <string name="esptouch2_bssid_label">BSSID: </string>
    <string name="esptouch2_ip_label">IP: </string>
    <string name="esptouch2_password_label">Password</string>
    <string name="esptouch2_aes_key">AES Key</string>
    <string name="esptouch2_aes_key_error">AES Key must be null or 16 bytes data</string>
    <string name="esptouch2_custom_data">Custom Data</string>
    <string name="esptouch2_custom_data_error">Custom data can\'t be more than 127 bytes</string>

    <string name="esptouch2_provision_title">Provision</string>
    <string name="esptouch2_provision_stop">Stop</string>
    <string name="esptouch2_provision_result_exception">Catch exception: %s</string>
    <string name="esptouch2_provision_result_none">Not found any devices</string>
    <string name="welcome_text">开启儿童智慧第一步</string>
    <string name="retry">请重试</string>
    <string name="phone_login_tx">本机号码一键登录</string>
    <string name="jump">跳过</string>
    <string name="pay_success">Payment success:</string>
    <string name="auth_failed">Authentication failed:</string>
    <string name="pay_failed">Payment failed:</string>
    <string name="auth_success">Authentication success:</string>
    <string name="confirm">Confirm:</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>

</resources>
