<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical">
            <!--顶部三按钮-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#0D9CFF"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonModuleParam"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/pintthismodule"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/return_btn" />

                <TextView
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/webfont"
                    android:text="@string/printer_title"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    app:backgroundTint="#00FFFFFF" />

                <TextView
                    android:id="@+id/connected_wifi"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/webfont"
                    android:gravity="center_vertical|right"
                    android:text="@string/printer_statue_uncon"
                    android:textColor="#FF5722"
                    android:textSize="13sp"
                    app:backgroundTint="#00FFFFFF" />
            </LinearLayout>
            <!--顶部三按钮 end-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background_radius"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:paddingLeft="25dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@mipmap/wifi_ico" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".8"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp">

                    <TextView
                        android:id="@+id/apSsidLabel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center"
                        android:layout_gravity="center_horizontal|center"
                        android:fontFamily="@font/webfont"
                        android:text="@string/inputPass"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButtonPrint"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:contentDescription="@string/pintthismodule"
                android:fontFamily="@font/webfont"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_connect" />
            <ImageButton
                android:id="@+id/gotoIndex"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:visibility="gone"
                android:contentDescription="@string/pintthismodule"
                android:fontFamily="@font/webfont"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_connect" />

            <TextView
                android:id="@+id/connect_req1"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#00FFFFFF"
                android:fontFamily="@font/webfont"
                android:paddingLeft="30dp"
                android:text="@string/connect_req1"
                android:textColor="#426A8D"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/connect_req2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#00FFFFFF"
                android:fontFamily="@font/webfont"
                android:paddingLeft="30dp"
                android:text="@string/connect_req2"
                android:textColor="#426A8D"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/connect_req3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#00FFFFFF"
                android:fontFamily="@font/webfont"
                android:paddingLeft="30dp"
                android:text="@string/connect_req3"
                android:textColor="#426A8D"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/connect_req4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#00FFFFFF"
                android:fontFamily="@font/webfont"
                android:paddingLeft="30dp"
                android:text="@string/connect_req4"
                android:textColor="#426A8D"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>