<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/file_text_show"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/file_text_show"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/up_button"
                android:layout_width="182dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/up_button" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">
            <ProgressBar
                android:id="@+id/progress_bar_dw"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="182dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:max="100"
                android:progress="0"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/down_button"
                android:layout_width="182dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="#D74D4D"
                android:text="@string/down_button" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
