<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_esptouch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <!--顶部按钮-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#0D9CFF"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonBack"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00FFFFFF"
                android:contentDescription="@string/inputPass"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingRight="10dp"
                android:paddingBottom="15dp"
                android:scaleType="fitStart"
                android:src="@drawable/return_btn" />

        </LinearLayout>
        <!--顶部按钮 end-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="#0D9CFF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@mipmap/wifi_ico" />
            <TextView
                android:id="@+id/wifiTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/webfont"
                android:text="@string/esptouch1_input_pass"
                android:textSize="17sp"
                android:gravity="center_vertical|center"
                android:textColor="#FFFFFF"
               />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:background="#f8f9fb"
            android:orientation="vertical">
            <!--wifi名称-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <TextView
                    android:id="@+id/apSsidLabel"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/wifiName"
                    android:textSize="17sp"
                    android:textColor="#426A8D"
                    android:fontFamily="@font/webfont" />

                <TextView
                    android:id="@+id/apSsidText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:textSize="17sp"
                    android:textColor="#426A8D"
                    android:fontFamily="@font/webfont"
                    android:background="@drawable/input_radius"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dp"
                   />

            </LinearLayout>
            <!--wifi密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <TextView
                    android:id="@+id/wifi_password"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:textColor="#426A8D"
                    android:text="@string/wifiPass"
                    android:textSize="17sp"
                    android:fontFamily="@font/webfont" />

                <!--<EditText
                    android:id="@+id/apPasswordEdit"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:textColor="#426A8D"
                    android:textSize="17sp"
                    android:fontFamily="@font/webfont"
                    android:background="@drawable/input_radius"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dp"
                    android:text="asdf"/>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/apPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/apPasswordEdit"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_weight="1"
                        android:textColor="#426A8D"
                        android:textSize="17sp"
                        android:fontFamily="@font/webfont"
                        android:background="@drawable/input_radius"
                        android:paddingTop="15dp"
                        android:paddingLeft="20dp"
                        android:paddingStart="20dp" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <!--连接按钮-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:id="@+id/confirmBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/pintthismodule"
                    android:fontFamily="@font/webfont"
                    android:scaleType="fitCenter"
                    android:src="@drawable/btn_connect" />
            </LinearLayout>

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <TextView
                android:id="@+id/apBssidText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_constraintBaseline_toBaselineOf="@id/apBssidLabel"
                app:layout_constraintStart_toEndOf="@id/apBssidLabel"
                app:layout_constraintTop_toTopOf="@id/apBssidLabel"
                android:layout_marginLeft="4dp" />
            <TextView
                android:id="@+id/messageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:visibility="invisible"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@id/packageModeGroup"
                app:layout_goneMarginStart="4dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deviceCountLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/esptouch1_device_count_title"
                app:layout_constraintTop_toBottomOf="@id/apPasswordLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deviceCountEdit"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/packageModeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/deviceCountLayout">

                <RadioButton
                    android:id="@+id/packageBroadcast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/esptouch1_package_broadcast" />

                <RadioButton
                    android:id="@+id/packageMulticast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/esptouch1_package_multicast"
                    android:layout_marginLeft="16dp" />
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>



