<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">
            <!--顶部三按钮-->

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                >
                <ImageButton
                    android:id="@+id/imageButtonModuleParam"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/pintthismodule"
                    android:paddingLeft="15dp"
                    android:paddingTop="15dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="15dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/return_black" />

                <TextView
                    android:id="@+id/printerName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fontFamily="@font/webfont"
                    android:text="@string/status_title"
                    android:textColor="#000"
                    android:textSize="17sp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical|center"/>
            </FrameLayout>
            <!--顶部三按钮 end-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/status_waiting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:fontFamily="@font/webfont"
                    android:gravity="center_vertical|center"
                    android:paddingLeft="5dp"
                    android:text="@string/status_waiting"
                    android:textColor="#999999"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/printingItem"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_margin="50dp"
               />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0%"
                android:fontFamily="@font/webfont"
                android:textColor="#FEAC1E"
                android:textSize="36sp"
                android:textStyle="bold"
                android:gravity="center_vertical|center"/>

            <TextView
                android:id="@+id/imageButtonPause"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/background_raduis_four_color"
                android:scaleType="fitCenter"
                android:text="取消打印"
                android:fontFamily="@font/webfont"
                android:textColor="#FFFFFF"
                android:textSize="17sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center" />
            <Button
                android:id="@+id/retryBtn"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0"
                android:text="@string/retry"
                android:textColor="#FFF"
                android:visibility="gone"
                app:backgroundTint="#FB3E3E" />

            <TextView
                android:id="@+id/textViewTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="剩余: 00:00:11"
                android:textColor="#999999"
                android:textSize="15sp"
                android:paddingTop="15sp"
                android:fontFamily="@font/webfont"
                android:gravity="center_vertical|center"/>



        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>